--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "font-awesome": "^4.7.0",
+    "konva": "^2.5.0",
+    "vue": "^2.5.17",
+    "vue-konva": "^1.0.7",
+    "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
